--- a/src/AzureBlobStorageForeach.csproj
+++ b/src/AzureBlobStorageForeach.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.21.2" />
     <PackageReference Include="ClosedXML" Version="0.102.3" />
+    <PackageReference Include="libphonenumber-csharp" Version="9.0.7" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0" />
   </ItemGroup>
